--- a/index.html
+++ b/index.html
@@ -71,10 +71,7 @@
         <header class="header">
             <div class="container border">
 
-                <a href="./index.html" class="logo">
-                    <span class="logo__web">Web</span>
-                    <span class="logo__studio">Studio</span>
-                </a>
+                <a href="./index.html" class="logo"><span class="logo__web">Web</span><span class="logo__studio">Studio</span></a>
 
                 <nav class="header-nav">
                     <ul class="header-nav__list">
@@ -423,38 +420,38 @@
                 <div class="footer__info">
                     <a href="./index.html"><span class="logo__web">Web</span><span class="logo__studio studio-white" >Studio</span></a>
                     <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-                    <div class="footer-contacts">
-                        <a href="mailto:info@devstudio.com" class="footer-mail">info@devstudio.com</a>
-                        <a href="tel:+380961111111" class="footer-number">+38 096 111 11 11</a>
+                    <div class="footer__contacts">
+                        <a href="mailto:info@devstudio.com" class="footer__mail">info@devstudio.com</a>
+                        <a href="tel:+380961111111" class="footer__number">+38 096 111 11 11</a>
                     </div>
                 </div>
 
                 <div class="footer__links">
                     <p class="footer__block-title">Присоединяйтесь</p>
-                    <ul class="welcome-list">
-                        <li class="welcome-item">
-                            <a href="" class="welcome-link">
+                    <ul class="welcome__list">
+                        <li class="welcome__item">
+                            <a href="" class="welcome__link">
                                 <svg>
                                     <use href="./images/icons.svg#instagram"></use>
                                 </svg>
                             </a>
                         </li> 
-                        <li class="welcome-item">
-                            <a href="" class="welcome-link">
+                        <li class="welcome__item">
+                            <a href="" class="welcome__link">
                                 <svg>
                                     <use href="./images/icons.svg#twitter"></use>
                                 </svg>
                             </a>
                         </li> 
-                        <li class="welcome-item">
-                            <a href="" class="welcome-link">
+                        <li class="welcome__item">
+                            <a href="" class="welcome__link">
                                 <svg >
                                     <use href="./images/icons.svg#facebook"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="welcome-item">
-                            <a href="" class="welcome-link">
+                        <li class="welcome__item">
+                            <a href="" class="welcome__link">
                                 <svg>
                                     <use href="./images/icons.svg#linkedin"></use>
                                 </svg>
@@ -463,8 +460,8 @@
                     </ul>
                 </div>
                 <div class="footer-subscribe">
-                    <p class="footer__block-title subscribe-title">Подпишитесь на рассылку</p>
-                    <form name="subscribe-form">
+                    <p class="footer__block-title subscribe--title">Подпишитесь на рассылку</p>
+                    <form name="subscribe__form">
                         <input class="subscribe__input" type="email" placeholder="E-mail">
                         <button class="button" type="submit">Подписаться
                             <svg class="button__icon" height="24" width="24">
